--- a/main_code.ipynb
+++ b/main_code.ipynb
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 1,
       "source": [
         "record = {'1001': {'name': 'wafer', 'pr': 20, 'qn': 1000},\r\n",
         "              '1002': {'name': 'Drink', 'pr': 85, 'qn': 200},\r\n",
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 2,
       "source": [
         "import json\r\n",
         "js = json.dumps(record)\r\n",
@@ -129,7 +129,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 3,
       "source": [
         "fd = open(\"record.json\",'r')\r\n",
         "r = fd.read()\r\n",
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 4,
       "source": [
         "import pandas as pd\r\n",
         "from IPython.display import display"
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 10,
       "source": [
         "user_id,password_id = \"anupama\",2278\r\n",
         "\r\n",
@@ -297,7 +297,7 @@
               "      <th>1001</th>\n",
               "      <td>wafer</td>\n",
               "      <td>20</td>\n",
-              "      <td>980</td>\n",
+              "      <td>998</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1002</th>\n",
@@ -411,13 +411,13 @@
               "      <th>1020</th>\n",
               "      <td>peanut butter</td>\n",
               "      <td>599</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>200</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1021</th>\n",
               "      <td>coffee powder</td>\n",
               "      <td>150</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>400</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1022</th>\n",
@@ -473,19 +473,13 @@
               "      <td>25</td>\n",
               "      <td>1000</td>\n",
               "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1031</th>\n",
-              "      <td>oats</td>\n",
-              "      <td>200</td>\n",
-              "      <td>299</td>\n",
-              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
               "                 name    pr     qn\n",
-              "1001            wafer    20    980\n",
+              "1001            wafer    20    998\n",
               "1002            Drink    85    200\n",
               "1003            Candy     5   1000\n",
               "1004       brown rice  2000    300\n",
@@ -504,8 +498,8 @@
               "1017      corn flakes   399    400\n",
               "1018            bread   199   2000\n",
               "1019            honey   200     59\n",
-              "1020    peanut butter   599    NaN\n",
-              "1021    coffee powder   150    NaN\n",
+              "1020    peanut butter   599    200\n",
+              "1021    coffee powder   150    400\n",
               "1022       milk shake    69   2000\n",
               "1023         lemonade    59   2000\n",
               "1024     water bottle    29   2000\n",
@@ -514,8 +508,7 @@
               "1027        apple pie   199    500\n",
               "1028            pizza   399    500\n",
               "1029          pancake   295     40\n",
-              "1030         biscuits    25   1000\n",
-              "1031             oats   200    299"
+              "1030         biscuits    25   1000"
             ]
           },
           "metadata": {}
@@ -525,10 +518,10 @@
           "name": "stdout",
           "text": [
             "-----------------------------------\n",
-            "Product:  shoes\n",
-            "Price:  2800\n",
+            "Product:  biscuits\n",
+            "Price:  25\n",
             "-----------------------------------\n",
-            "Billing Amount:  8400\n"
+            "Billing Amount:  500\n"
           ]
         }
       ],
@@ -542,7 +535,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 11,
       "source": [
         "from datetime import datetime\r\n",
         "now_method = datetime.now()\r\n",
@@ -553,7 +546,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 12,
       "source": [
         "sales={ui_prod : {'qn' : ui_quant, 'amount gained': record[ui_prod]['pr'] * ui_quant, 'time': currentTime}}"
       ],
@@ -562,7 +555,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "source": [
         "js_sale = json.dumps(sales)\r\n",
         "\r\n",
@@ -575,7 +568,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 13,
       "source": [
         "with open(\"sales.json\", \"r+\") as file:\r\n",
         "\r\n",
